force-app/main/default/objects/Project_Weekly_Update__c/Project_Weekly_Update__c.object-meta.xml
<CustomObject>
    <description>Used by eBusiness group for them to track weekly status on their projects</description>
    <label>Project Weekly Update</label>
    <nameField>
        <label>Project Weekly Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Weekly Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>