force-app/main/default/objects/Project_Weekly_Update__c/fields/Milestone_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Delivery_Date__c</fullName>
    <label>Milestone Delivery Date</label>
    <type>Date</type>
</CustomField>