force-app/main/default/objects/Project_Weekly_Update__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <label>Milestones</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>