force-app/main/default/objects/Project_Weekly_Update__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>SFDC_Project__c</referenceTo>
    <relationshipLabel>Project Weekly Updates</relationshipLabel>
    <relationshipName>Project_Weekly_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>