force-app/main/default/objects/Project_Weekly_Update__c/fields/Reporting_Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Week_Ending__c</fullName>
    <description>Used for dynamic reporting to calculate week ending @ 5pm EST</description>
    <formula>7
+ DATEVALUE(CreatedDate) 
-case(
   WEEKDAY(DATEVALUE(CreatedDate) ),
   6, if(
      hour(TIMEVALUE(CreatedDate - 4/24))&gt;= 17,
      0,
      7
   ),
   7, 1,
   WEEKDAY(DATEVALUE(CreatedDate) ) + 1
)</formula>
    <inlineHelpText>Used for dynamic reporting to calculate week ending @ 5pm EST</inlineHelpText>
    <label>Reporting Week Ending</label>
    <type>Date</type>
</CustomField>