force-app/main/default/objects/Project_Weekly_Update__c/fields/Risk_Mitigation_Efforts__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation_Efforts__c</fullName>
    <label>Risk Mitigation Efforts</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>