force-app/main/default/objects/Project_Weekly_Update__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <label>Risks</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>