force-app/main/default/objects/Project_Weekly_Update__c/fields/Update_Comments__c.field-meta.xml
<CustomField>
    <fullName>Update_Comments__c</fullName>
    <label>Update Comments</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>