force-app/main/default/objects/Project_Weekly_Update__c/fields/Weekly_Update__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Update__c</fullName>
    <label>Weekly Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>