force-app/main/default/objects/Project_Weekly_Update__c/recordTypes/EBusiness_Project_Weekly_Update.recordType-meta.xml
<RecordType>
    <fullName>EBusiness_Project_Weekly_Update</fullName>
    <active>true</active>
    <label>EBusiness Project Weekly Update</label>
</RecordType>