force-app/main/default/objects/Project_Weekly_Update__c/recordTypes/Project_Weekly_Update.recordType-meta.xml
<RecordType>
    <fullName>Project_Weekly_Update</fullName>
    <active>true</active>
    <label>Project Weekly Update</label>
</RecordType>